fixed degrees symbol not aligned

--- a/src/style.css
+++ b/src/style.css
@@ -74,7 +74,7 @@ body {
 #degrees {
   flex: 0.55 0.55 auto;
   text-align: center;
-  font-size: 60px;
+  font-size: 58px;
   border-right: 3px solid rgb(236, 220, 75);
   letter-spacing: 0;
   padding-right: 1rem;
